--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
+html {
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+body {
+    margin: 0;
+    height:100%;
+}
+
 .carousal {
-    position: relative;
     height: 100%;
     width: 100%;
 }
@@ -8,9 +17,14 @@
     height: 250px;
     width: 500px;
     border-radius: 40px;
-    left: 750px;
-    top: 300px;
     position: absolute;
+    top:30%;
+    left:31%;
+}
+.wrapper {
+    position: relative;
+    height: inherit;
+    width: inherit;
 }
 
 #item1{
@@ -36,12 +50,12 @@
 
 #left-arrow {
     position: absolute;
-    left: 700px;
-    top : 520px;
+    left: 25%;
+    top : 40%;
 }
 
 #right-arrow {
     position: absolute;
-    left:1270px;
-    top : 520px;
+    right: 25%;
+    top : 40%;
 }
